--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "template simples",
   "author": "Filipe Drumond <filipe.dp@outlook.com>",
   "private": true,
   "scripts": {
+    "commit": "git-cz",
+    "push": "npm version -f patch -m \"➕ version: v-%s Gerada automaticamente no push\" && git tag | xargs git tag -d && git push origin ",
+    "prepare": "husky install",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "eslint --ext .js,.jsx,.vue .",
