--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
+    "material-icons": "^1.13.1",
     "moment": "^2.29.3",
     "sass": "^1.54.0",
     "sass-loader": "^10.0.0",
