--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "template simples",
   "author": "Filipe Drumond <filipe.dp@outlook.com>",
   "private": true,
@@ -13,18 +13,7 @@
     "lint:fix": "eslint --fix --ext .js,.jsx,.vue ."
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "core-js": "^3.6.5",
-    "js-cookie": "^3.0.1",
-    "material-icons": "^1.13.1",
-    "moment": "^2.29.3",
-    "sass": "^1.54.0",
-    "sass-loader": "^10.0.0",
-    "vue": "^3.0.0",
-    "vue-i18n": "^9.3.0-beta.6",
-    "vue-router": "^4.0.15",
-    "vue-the-mask": "^0.11.1",
-    "vuex": "^4.0.0-0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
@@ -33,14 +22,26 @@
     "@vue/cli-plugin-vuex": "^5.0.6",
     "@vue/cli-service": "^5.0.6",
     "@vue/compiler-sfc": "^3.0.0",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.4",
     "commitlint": "^17.0.2",
     "commitlint-config-gitmoji": "^2.2.5",
+    "core-js": "^3.6.5",
     "cz-customizable": "^6.3.0",
     "eslint": "^7.5.0",
     "eslint-plugin-vue": "^7.0.0",
-    "vue-cli-plugin-i18n": "^0.6.1"
+    "js-cookie": "^3.0.1",
+    "material-icons": "^1.13.1",
+    "moment": "^2.29.3",
+    "sass": "^1.54.0",
+    "sass-loader": "^10.0.0",
+    "vue": "^3.0.0",
+    "vue-cli-plugin-i18n": "^0.6.1",
+    "vue-i18n": "^9.3.0-beta.6",
+    "vue-router": "^4.0.15",
+    "vue-the-mask": "^0.11.1",
+    "vuex": "^4.0.0-0"
   },
   "eslintConfig": {
     "root": true,
