--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:fix": "eslint --fix --ext .js,.jsx,.vue ."
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "json-server": "^0.17.1"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
