--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
