--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.1.3",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.3",
     "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
     "material-icons": "^1.13.1",
